--- a/hacknroll/package.json
+++ b/hacknroll/package.json
@@ -13,7 +13,8 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.7",
     "@mui/material": "^5.15.7",
-    "next": "14.1.0",
+    "firebase": "^10.8.0",
+    "next": "^14.1.0",
     "react": "^18",
     "react-dom": "^18"
   },
