--- a/hacknroll/package.json
+++ b/hacknroll/package.json
@@ -13,10 +13,12 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.7",
     "@mui/material": "^5.15.7",
+    "@mui/x-date-pickers": "^6.19.3",
     "firebase": "^10.8.0",
     "next": "^14.1.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-hook-form": "^7.50.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
